--- a/index.html
+++ b/index.html
@@ -4,8 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+<header>
+    <div class = "navbar">
+        <nav>
+            <img class = 'small-logo' src ="style/logo.png">
+            <div>
+                <button><a href ="index.html" class="button-one">Home</a></button>
+                <button><a href ="about.html" class="button-one">About</a></button>
+                <button><a href ="contact.html" class="button-one">Contact</a></button>
+                <button><a href ="projects.html" class="button-one">Projects</a></button>
+            </div>
+        </nav>
+    </div>
+</header>
+<section class = "frontpage">
+    <div class="container">
+            <div class = "container">
+                <button class="img-button">
+                    <h1>Brayan Londono</h1>
+                    <a href="projects.html" class ="button-two">My Projects</a>
+                </button>
+            </div>
+    </div>
+</section>
+
+<section class = "body">
+    <div class = "row">
+        <div class="row-element">
+            <img src = "https://images.pexels.com/photos/773297/pexels-photo-773297.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+            <h2>Skyline</h2>
+        </div>
+        <div class="row-element">
+                <img src = "https://images.pexels.com/photos/773297/pexels-photo-773297.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <h2>Skyline</h2>
+        </div>
+        <div class="row-element">
+            <img src = "https://images.pexels.com/photos/773297/pexels-photo-773297.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+            <h2>Skyline</h2>
+        </div>
+    </div>
+    <div class = "row">
+        <div class="row-element">
+            <img src = "https://images.pexels.com/photos/773297/pexels-photo-773297.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+            <h2>Skyline</h2>
+        </div>
+        <div class="row-element">
+                <img src = "https://images.pexels.com/photos/773297/pexels-photo-773297.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <h2>Skyline</h2>
+        </div>
+        <div class="row-element">
+            <img src = "https://images.pexels.com/photos/773297/pexels-photo-773297.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+            <h2>Skyline</h2>
+        </div>
+    </div>
     
+        <footer>
+            <div class = "container">
+                <button class = "button-one"><a href="contact.html" class = "button-one">Contact Me</a></button>
+            </div>
+        </footer>
+</section>
+
 </body>
 </html>
