--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class = "navbar">
         <nav>
             <img class = 'small-logo' src ="style/logo.png">
-            <div>
+            <div class ="links">
                 <button><a href ="index.html" class="button-one">Home</a></button>
                 <button><a href ="about.html" class="button-one">About</a></button>
                 <button><a href ="contact.html" class="button-one">Contact</a></button>
@@ -21,14 +21,10 @@
     </div>
 </header>
 <section class = "frontpage">
-    <div class="container">
-            <div class = "container">
-                <button class="img-button">
+            <div class = "frontpage">
                     <h1>Brayan Londono</h1>
-                    <a href="projects.html" class ="button-two">My Projects</a>
-                </button>
+                    <a href="projects.html"><button class = "button-two">My Projects</button></a>
             </div>
-    </div>
 </section>
 
 <section class = "body">
